2002-05-26  Junichi Uekawa  <dancer@debian.org>

	* TODO: update TODO, with notes on bug.

2002-05-16  Junichi Uekawa  <dancer@debian.org>

	* parameter.c (read_machinelist): minor cosmetic fix.
	if alternatelistfile is NULL, do not try to display it in error 
	message.

2002-04-20  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Build-Depends): remove libtool dependency.

	* Makefile (install): updated to remove libtool reference.

	* debian/control (Build-Depends): add build-depends on libtool.

	* Makefile: removed libdshconfig trace

	* debian/rules (clean): remove libdshconfig trace.

	* move libdshconfig from dsh source to separate package

2002-03-31  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (free_dshconfig): free the title and data for each item, fix memleak.

2002-03-30  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.h: added dshconfig_searchdata

	* libdshconfig.c (dshconfig_searchdata): added

2002-03-28  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.h: added declaration for dshconfig_splitline.

	* libdshconfig.c (dshconfig_splitline): created a new function, so that this piece of code can be re-used.
	(read_oneline): changed to use dshconfig_splitline instead
	(read_oneline): fixing things, so that dancer acpi can use this 
	parser routine instead.

2002-03-18  Junichi Uekawa  <dancer@debian.org>

	* debian/rules: install the libs and other things in the right package

	* libdshconfig.h: added some ifndefs.

	* Makefile (install): added include

	* debian/rules (binary-arch): added dh_makeshlibs

	* Makefile (install): make install target to use libtool
	(install): fix minor detail in install target.

	* libdshconfig.c (read_oneline): fix it so that # at the start of line won't cause segv.

	* dsh.conf: modified to make it look different and for debugging dsh.

	* parameter.c (load_configfile): rewrite the config reader using libdshconfig.

	* test-dshconfig.c (main): comment.
